--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,10 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+.img-fluid{
+  width: 100%;
+  height: auto;
+}
 #hero {
   width: 100%;
   height: 100vh;
