--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,24 +31,36 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 /* btn*/
-.btn {
-  background-color: DodgerBlue;
-  border: black;
-  color: white;
-  padding: 12px 30px;
-  height: 50px;
-  cursor: pointer;
-  font-size: 20px;
-  align-self: auto;
-  margin-bottom: 0.5cm;
+..btn {
+  position: relative;
+  display: inline-flex;
   align-items: center;
-  
-  
+  column-gap: 15px;
+  border: none;
+  border-radius: 4px;
+  background-image: conic-gradient(from 36deg at 25% 50%,#A100FFFF 30% 25%,rgb(3, 13, 4) 0%);
+  font-size: 24px;
+  cursor: pointer;
+  overflow: hidden;
+  color: #fff;
+  transition: box-shadow.25s ease-in;
+
 }
 
 /* Darker background on mouse-over */
 .btn:hover {
-  background-color: RoyalBlue;
+  inset: 0 0 0 50px
+  rgb(0 0 0/25%);
+}
+.btn:hover.icon{
+  animation: slideDown 1s linear infinite;
+}
+@keyframes slideDown{
+  from{
+    transform: translateY(-50px);
+  }to{
+    transform: translateY(50px);
+  }
 }
 
 /*--------------------------------------------------------------
