--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 /* btn*/
-..btn {
+.btn {
   position: relative;
   display: inline-flex;
   align-items: center;
