--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,7 +404,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
@@ -433,141 +433,6 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0aee15;
-}
-
-.skills .progress-bar-wrap1 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar1 {
-  width: 450px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #ff1e00;
-}
-.skills .progress-bar-wrap2 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar2 {
-  width: 400px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #ff7300;
-}
-.skills .progress-bar-wrap3 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar3 {
-  width: 450px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #2f00ff;
-}
-.skills .progress-bar-wrap4 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar4 {
-  width: 400px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #cf44c4;
-}
-.skills .progress-bar-wrap5 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar5 {
-  width: 300px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #cbeb58;
-}
-.skills .progress-bar-wrap6 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar6 {
-  width: 300px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #06c3fd;
-}
-.skills .progress-bar-wrap7 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar7 {
-  width: 300px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #080808;
-}
-.skills .progress-bar-wrap8 {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar8 {
-  width: 300px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #a82727;
-}
-/*--------------------------------------------------------------
-# Resume
---------------------------------------------------------------*/
-.resume .resume-title {
-  font-size: 26px;
-  font-weight: 700;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: #050d18;
-}
-.resume .resume-item {
-  padding: 0 0 20px 20px;
-  margin-top: -2px;
-  border-left: 2px solid #1f5297;
-  position: relative;
-}
-.resume .resume-item h4 {
-  line-height: 18px;
-  font-size: 18px;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
-  color: #050d18;
-  margin-bottom: 10px;
-}
-.resume .resume-item h5 {
-  font-size: 16px;
-  background: #e4edf9;
-  padding: 5px 15px;
-  display: inline-block;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-.resume .resume-item ul {
-  padding-left: 20px;
-}
-.resume .resume-item ul li {
-  padding-bottom: 10px;
-}
-.resume .resume-item:last-child {
-  padding-bottom: 0;
-}
-.resume .resume-item::before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50px;
-  left: -9px;
-  top: 0;
-  background: #fff;
-  border: 2px solid #1f5297;
 }
 
 /*--------------------------------------------------------------
